# plane-assets

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: gh-pages.yml
levels/: entities.json  level_1.json  level_2.json  levels.json  theme.json
models/: bullet.glb  center-block.glb  grass-block.glb  helicopter.glb  key-base.glb  left-mouse-button.glb  letter-a.glb  letter-d.glb  letter-s.glb  letter-w.glb  mouse.glb  particle.glb  plane.glb  player-drone.glb  saucer.glb  water-surface.glb
models/src/: box.blend  center-block.blend  particle.blend  saucer.blend  sphere.blend
models_bk/: bullet.glb
scripts/: blend2glb.py  unused-glb.py  used-blend.py  used-glb.py
scripts/utils/: consts.py  file_names.py  print.py
src/: bullet.blend  grass-block.blend  helicopter.blend  left-mouse-button.blend  letter-a.blend  letter-d.blend  letter-s.blend  letter-w.blend  mouse.blend  particle.blend  plane.blend  player-drone.blend  saucer.blend  water-surface.blend
src/models/: helicopter.blend  key-base.blend  letter-a.blend  letter-d.blend  letter-s.blend  letter-w.blend  plane.blend  saucer.blend  water-surface.blend
src/sound/: .gitignore
src/sound/gun_shot/: gun_shot.ardour  gun_shot.history  instant.xml
